tests/machine/x/pl/sort_stable.error
exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/sort_stable.pl:9: user:main is/2: Type error: `character' expected, found `"a"' (a string)
